force-app/main/default/objects/custom_create246__c/custom_create246__c.object-meta.xml
<CustomObject>
    <label>Custom created object246</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects246</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>