force-app/main/default/objects/custom_create246__c/fields/custom_create_246field501__c.field-meta.xml
<CustomField>
    <fullName>custom_create_246field501__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 246field501</label>
    <type>Checkbox</type>
</CustomField>