force-app/main/default/objects/custom_create246__c/fields/custom_create_246field601__c.field-meta.xml
<CustomField>
    <fullName>custom_create_246field601__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 246field601</label>
    <type>Checkbox</type>
</CustomField>